--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -21,12 +21,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e833866-f46e-4f08-9fb6-fc267afd3b77",
+   "cell_type": "markdown",
+   "id": "9eab3775-e469-498f-a0d8-6c6708e873fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "lol"
+   ]
   }
  ],
  "metadata": {
