--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -25,8 +25,87 @@
    "id": "9eab3775-e469-498f-a0d8-6c6708e873fb",
    "metadata": {},
    "source": [
-    "lol"
+    "## Question: \n",
+    "\n",
+    "Are cholesterol and/or blood pressure good indicators of heart disease?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf69311-1efd-433b-a53f-cf7999c34fb6",
+   "metadata": {},
+   "source": [
+    "## Preliminary Exploratory Data Analysis:\n",
+    "\n",
+    "We will be using the Heart Disease Data Set provided by UC Irvine. This data set describes heart condition information based on 303 individuals from different regions. This data is divided into 4 databases: Cleveland, Hungary, Switzerland, and the VA Long Beach, however we will only be utilizinng the Cleaveland data. The data set contains 76 attributes, but so far only 14 have been cited in literature:\n",
+    "\n",
+    "- Age: age in years\n",
+    "- Sex: sex (1 = male; 0 = female)\n",
+    "- Cp: chest pain type (value 1 = typical angina, value 2 = atypical angina, value 3 = non-anginal pain, value 4 = asymptomatic)\n",
+    "- Trestbps: resting blood pressure (in mm Hg on admission to the hospital)\n",
+    "- Chol: serum cholesterol in mg/dl\n",
+    "- Fbs: fasting blood sugar > 120 mg/dl (1 = true; 0 = false)\n",
+    "- Restecg: resting electrocardiographic results (value 0 = normal, value 1 = having ST-T wave abnormality, value 2 = showing probably or definite left ventricular hypertrophy by Estes’ criteria\n",
+    "- Thalach: maximum heart rate achieved\n",
+    "- Exang: exercise induced angina (1 = yes; 0 = no)\n",
+    "- Oldpeak: ST depression induced by exercise relative to rest\n",
+    "- Slope: the slope of the peak exercise ST segment (value 1 = upsloping, value 2 = flat, value 3 = downsloping)\n",
+    "- Ca: number of major vessels (0-3) colored by fluoroscopy\n",
+    "- Thal: 3 = normal, 6 = fixed defect, 7 = reversible defect\n",
+    "- Num: diagnosis of heart disease (angiographic disease status) (value 0 = <50% diameter narrowing, value 1 = > 50% diameter narrowing)\n",
+    "\n",
+    "For this project, we will be using the processed data from Cleaveland."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf97ea2f-2117-47c1-8812-4bb74c6c0663",
+   "metadata": {},
+   "source": [
+    "## Method\n",
+    "\n",
+    "To start our preliminary analysis, we loaded the Heart Disease dataset from the original source on the web using"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "136c956f-a4be-4982-baa1-3a7bf6c1f93a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d039977c-f8f6-4c10-9617-033c8bd69eeb",
+   "metadata": {},
+   "source": [
+    "Once downloaded, we use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da8c5904-3cbf-4a78-b53e-0fca49c2bf7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1478d26-37ad-4c38-85f0-508a19a2e4ad",
+   "metadata": {},
+   "source": [
+    "to read the data on Jupyter Hub. The columns from the original data did not have column names, so we wrangled the data to create column names using the read_delim function, storing this new data in a variable called df:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "846d1377-df36-4b53-8d7b-e094c626ddca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
