--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -33,7 +33,10 @@
   {
    "cell_type": "markdown",
    "id": "2bf69311-1efd-433b-a53f-cf7999c34fb6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Preliminary Exploratory Data Analysis:\n",
     "\n",
@@ -83,6 +86,9 @@
    "id": "36e8b8b9-2dcc-4d98-93d1-adf0415dbd50",
    "metadata": {},
    "source": [
+    "Read csv file online from github, then we store the database in a variable ?. \n",
+    "We no\n",
+    "\n",
     "Read the database online and clean the database, etc…..\n",
     "\n",
     " \n",
