--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -82,6 +82,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68169eb1-1cda-4e2d-82f4-8e604450e170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleveland <- read_delim(\"https://raw.githubusercontent.com/mikibarra034/dsci-100-template/main/Data/processed.cleveland.data\", \",\", col_names = names)\n",
+    "df_cleveland[df_cleveland == \"?\"] <- NA\n",
+    "\n",
+    "df_cleveland"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "36e8b8b9-2dcc-4d98-93d1-adf0415dbd50",
    "metadata": {},
