--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3386701d-62ba-4134-94ea-a14d93b215ea",
    "metadata": {},
    "outputs": [],
@@ -90,8 +90,27 @@
    "source": [
     "df_cleveland <- read_delim(\"https://raw.githubusercontent.com/mikibarra034/dsci-100-template/main/Data/processed.cleveland.data\", \",\", col_names = names)\n",
     "df_cleveland[df_cleveland == \"?\"] <- NA\n",
+    "df_cleveland <- mutate(df_cleveland, Num2 = Num/Num)\n",
+    "df_cleveland[df_cleveland == \"NaN\"] <- 0\n",
+    "df_cleveland <- df_cleveland |> \n",
+    "        mutate(\"Location\" = \"Cleveland\")\n",
+    "\n",
     "\n",
     "df_cleveland"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "607c22c6-311c-44a9-9ec2-e2904d7ed10e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_plot <- df_cleveland |>\n",
+    "    ggplot(aes(x=Age,y=Chol, color=factor(Num2))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Geographical Location\", shape = \"Dagnosis of Hart Disease\")\n",
+    "final_plot"
    ]
   },
   {
