--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "library(tidyverse)\n",
-    "library(tidymodels)"
+    "# library(tidymodels)"
    ]
   },
   {
@@ -89,12 +89,12 @@
    "outputs": [],
    "source": [
     "df_cleveland <- read_delim(\"https://raw.githubusercontent.com/mikibarra034/dsci-100-template/main/Data/processed.cleveland.data\", \",\", col_names = names)\n",
+    "names = c(\"Age\",\"Sex\", \"p\",\"Trestbps\", \"Chol\", \"Fbs\", \"Restecg\", \"Thalach\", \"Exang\", \"Oldpeak\", \"Slope\", \"Ca\", \"Thal\", \"Num\")\n",
     "df_cleveland[df_cleveland == \"?\"] <- NA\n",
     "df_cleveland <- mutate(df_cleveland, Num2 = Num/Num)\n",
     "df_cleveland[df_cleveland == \"NaN\"] <- 0\n",
     "df_cleveland <- df_cleveland |> \n",
     "        mutate(\"Location\" = \"Cleveland\")\n",
-    "\n",
     "\n",
     "df_cleveland"
    ]
@@ -106,11 +106,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_plot <- df_cleveland |>\n",
+    "BP_vs_Age_plot <- df_cleveland |>\n",
     "    ggplot(aes(x=Age,y=Chol, color=factor(Num2))) + \n",
     "        geom_point() +\n",
-    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Geographical Location\", shape = \"Dagnosis of Hart Disease\")\n",
-    "final_plot"
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Geographical Location\", shape = \"Dagnosis of Heart Disease\")\n",
+    "BP_vs_Age_plot"
    ]
   },
   {
