--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "names = c(\"Age\",\"Sex\", \"p\",\"Trestbps\", \"Chol\", \"Fbs\", \"Restecg\", \"Thalach\", \"Exang\", \"Oldpeak\", \"Slope\", \"Ca\", \"Thal\", \"Num\")\n",
-    "df_cleveland <- read_delim(\"https://raw.githubusercontent.com/mikibarra034/dsci-100-template/main/Data/processed.cleveland.data\", \",\", col_names = names)\n",
+    "df_cleveland <- read_delim(\"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\", \",\", col_names = names)\n",
     "df_cleveland[df_cleveland == \"?\"] <- NA\n",
     "df_cleveland <- mutate(df_cleveland, Num2 = Num/Num)\n",
     "df_cleveland[df_cleveland == \"NaN\"] <- 0\n",
