--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -107,10 +107,38 @@
    "outputs": [],
    "source": [
     "BP_vs_Age_plot <- df_cleveland |>\n",
+    "    ggplot(aes(x=Age,y=Trestbps, color=factor(Num2))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Diagnosis of Heart Disease\")\n",
+    "BP_vs_Age_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb489a29-7c2e-452f-b37f-a3d7dda467df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Chol_vs_Age_plot <- df_cleveland |>\n",
     "    ggplot(aes(x=Age,y=Chol, color=factor(Num2))) + \n",
     "        geom_point() +\n",
-    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Geographical Location\", shape = \"Dagnosis of Heart Disease\")\n",
-    "BP_vs_Age_plot"
+    "        labs(x = \"Age\",y = \"Chol\", color = \"Diagnosis of Heart Disease\")\n",
+    "Chol_vs_Age_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38686d08-4dbe-4a9a-acc2-24da2ea82601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BP_vs_Chol_plot <- df_cleveland |>\n",
+    "    ggplot(aes(x=Chol,y=Trestbps, color=factor(Num2))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Chol\",y = \"Blood Pressure\", color = \"Diagnosis of Heart Disease\")\n",
+    "BP_vs_Chol_plot"
    ]
   },
   {
