--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -142,6 +142,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "655a1138-3d47-4f64-a335-5bfb74bd7a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "et.seed(1)\n",
+    "\n",
+    "cleveland_recipe <- recipe(Num2 ~ Age + Trestbps, data = cleveland_train) |>\n",
+    "  step_scale(all_predictors()) |>\n",
+    "  step_center(all_predictors())\n",
+    "\n",
+    "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |>\n",
+    "  set_engine(\"kknn\") |>\n",
+    "  set_mode(\"classification\")\n",
+    "\n",
+    "cleveland_vfold <- vfold_cv(cleveland_train, v = 5, strata = Num2)\n",
+    "gridvals <- tibble(neighbors = seq(1, 25))\n",
+    "\n",
+    "cleveland_results <- workflow() |>\n",
+    "  add_recipe(cleveland_recipe) |>\n",
+    "  add_model(knn_spec) |>\n",
+    "  tune_grid(resamples = cleveland_vfold, grid = gridvals) |>\n",
+    "  collect_metrics() |>\n",
+    "  filter(.metric == \"accuracy\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "36e8b8b9-2dcc-4d98-93d1-adf0415dbd50",
    "metadata": {},
