--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -539,6 +539,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dd2dfacd-352b-41c0-a6c9-5b9f91f509ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalization \n",
+    "df_cleveland <- df_cleveland |>\n",
+    "  mutate(Age = scale(Age, center = TRUE),\n",
+    "         Trestbps = scale(Trestbps, center = TRUE),\n",
+    "         Chol = scale(Chol, center = TRUE))\n",
+    "\n",
+    "df_cleveland"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "143b5770-ea8c-448c-9aca-73adb630ceb1",
    "metadata": {},
