--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "## Method\n",
     "\n",
-    "To start our preliminary analysis, we loaded the Heart Disease dataset from the original source on the web using"
+    "To start our preliminary analysis, we loaded the Heart Disease dataset from the original source on the web using, the data from Cleveland is used. "
    ]
   },
   {
