--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -67,7 +67,15 @@
    "source": [
     "## Method\n",
     "\n",
-    "To start our preliminary analysis, we loaded the Heart Disease dataset from the original source on the web using, the data from Cleveland is used. "
+    "To start our preliminary analysis, we loaded the Heart Disease dataset from the original source on the web using, the data from Cleveland is used and we primaryly process the raw database as follow:\n",
+    "\n",
+    "- Read the database from UCI machine learning data base\n",
+    "\n",
+    "- After having a brief view of the raw data base, we could find that\n",
+    "\n",
+    "  - Some Questionary mark is inside the database which indicates lacking data\n",
+    "  - Also, the parameter indicates heart disease have 3 different values and not a optimal factor to train a classification model with binary variable. Therefore, we mutate it to the value 0 or 1 where 0 indicates no heart disease and 1 indicates heart disease.\n",
+    "  - Additionally, for the convenience of implementing classification model later, we mutate a new column Num2 which is a factor to indicate heart disease."
    ]
   },
   {
