--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1106,11 +1106,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "876812f4-ca34-4dd2-a563-16a53785aca3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "══ Workflow [trained] ══════════════════════════════════════════════════════════\n",
+       "\u001b[3mPreprocessor:\u001b[23m Recipe\n",
+       "\u001b[3mModel:\u001b[23m nearest_neighbor()\n",
+       "\n",
+       "── Preprocessor ────────────────────────────────────────────────────────────────\n",
+       "2 Recipe Steps\n",
+       "\n",
+       "• step_scale()\n",
+       "• step_center()\n",
+       "\n",
+       "── Model ───────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "Call:\n",
+       "kknn::train.kknn(formula = ..y ~ ., data = data, ks = min_rows(20,     data, 5), kernel = ~\"rectangular\")\n",
+       "\n",
+       "Type of response variable: nominal\n",
+       "Minimal misclassification: 0.3656388\n",
+       "Best kernel: rectangular\n",
+       "Best k: 20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 20) |>\n",
+    "            set_engine(\"kknn\") |>\n",
+    "            set_mode(\"classification\")\n",
+    "\n",
+    "cleveland_recipe <- recipe(Num2 ~ Age + Trestbps, data = cleveland_train) |>\n",
+    "                        step_scale(all_predictors()) |>\n",
+    "                        step_center(all_predictors())\n",
+    "\n",
+    "cleveland_fit <- workflow() |>\n",
+    "                    add_recipe(cleveland_recipe) |>\n",
+    "                    add_model(knn_spec) |>\n",
+    "                    fit(data = cleveland_train)\n",
+    "cleveland_fit"
+   ]
   },
   {
    "cell_type": "markdown",
