--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1155,6 +1155,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "203491e9-fc43-47ff-8669-a115c35a065f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleveland_testing_set_prediction <- predict(cleveland_fit, cleveland_test)\n",
+    "prediction_plot <- predict(cleveland_fit, cleveland_test) |> ggplot(aes(x=Age, y=Trestbps, color=factor(Num2))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Prediction of Getting Heart Disease\") + ggtitle(\"Predicted Heart Disease\")\n",
+    "actual_plot <- cleveland_test |> ggplot(aes(x=Age, y=Trestbps, color=factor(Num2))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Prediction of Getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
+    "grid.arrange(prediction_plot, actual_plot, ncol=2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "36e8b8b9-2dcc-4d98-93d1-adf0415dbd50",
    "metadata": {},
