--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1168,7 +1168,8 @@
     "actual_plot <- cleveland_test |> ggplot(aes(x=Age, y=Trestbps, color=factor(Num2))) + \n",
     "        geom_point() +\n",
     "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Prediction of Getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
-    "grid.arrange(prediction_plot, actual_plot, ncol=2)"
+    "combined_plot <- prediction_plot+actual_plot;\n",
+    "combined_plot"
    ]
   },
   {
