--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1156,77 +1156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "203491e9-fc43-47ff-8669-a115c35a065f",
+   "execution_count": null,
+   "id": "827f5d9e-87c8-4e3b-821a-f35827248e09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR while rich displaying an object: Error in FUN(X[[i]], ...): object 'Age' not found\n",
-      "\n",
-      "Traceback:\n",
-      "1. tryCatch(withCallingHandlers({\n",
-      " .     if (!mime %in% names(repr::mime2repr)) \n",
-      " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
-      " .     rpr <- repr::mime2repr[[mime]](obj)\n",
-      " .     if (is.null(rpr)) \n",
-      " .         return(NULL)\n",
-      " .     prepare_content(is.raw(rpr), rpr)\n",
-      " . }, error = error_handler), error = outer_handler)\n",
-      "2. tryCatchList(expr, classes, parentenv, handlers)\n",
-      "3. tryCatchOne(expr, names, parentenv, handlers[[1L]])\n",
-      "4. doTryCatch(return(expr), name, parentenv, handler)\n",
-      "5. withCallingHandlers({\n",
-      " .     if (!mime %in% names(repr::mime2repr)) \n",
-      " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
-      " .     rpr <- repr::mime2repr[[mime]](obj)\n",
-      " .     if (is.null(rpr)) \n",
-      " .         return(NULL)\n",
-      " .     prepare_content(is.raw(rpr), rpr)\n",
-      " . }, error = error_handler)\n",
-      "6. repr::mime2repr[[mime]](obj)\n",
-      "7. repr_text.default(obj)\n",
-      "8. paste(capture.output(print(obj)), collapse = \"\\n\")\n",
-      "9. capture.output(print(obj))\n",
-      "10. withVisible(...elt(i))\n",
-      "11. print(obj)\n",
-      "12. print.ggplot(obj)\n",
-      "13. ggplot_build(x)\n",
-      "14. ggplot_build.ggplot(x)\n",
-      "15. by_layer(function(l, d) l$compute_aesthetics(d, plot))\n",
-      "16. f(l = layers[[i]], d = data[[i]])\n",
-      "17. l$compute_aesthetics(d, plot)\n",
-      "18. f(..., self = self)\n",
-      "19. scales_add_defaults(plot$scales, data, aesthetics, plot$plot_env)\n",
-      "20. lapply(aesthetics[new_aesthetics], eval_tidy, data = data)\n",
-      "21. FUN(X[[i]], ...)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAAA1BMVEX///+nxBvIAAAACXBI\nWXMAABJ0AAASdAHeZh94AAACw0lEQVR4nO3BgQAAAADDoPlTH+ECVQEAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMA3yB4AAXYzOhIAAAAASUVORK5CYII=",
-      "text/plain": [
-       "plot without title"
-      ]
-     },
-     "metadata": {
-      "image/png": {
-       "height": 420,
-       "width": 420
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cleveland_testing_set_prediction <- predict(cleveland_fit, cleveland_test)\n",
-    "prediction_plot <- predict(cleveland_fit, cleveland_test) |>\n",
-    "    ggplot(aes(x= Age, y= Trestbps, color=factor(Num2))) + \n",
-    "    geom_point() +\n",
-    "    labs(x = \"Age\",y = \"Blood Pressure\", color = \"Prediction of Getting Heart Disease\") + \n",
-    "    ggtitle(\"Predicted Heart Disease\")\n",
+    "cleveland_prediction <- predict(cleveland_fit, cleveland_test)\n",
+    "cleveland_testing_set_prediction <- cbind(cleveland_test,cleveland_prediction)\n",
+    "cleveland_testing_set_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06eeed9f-d650-4a92-8a1e-2a2b48ca33b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_plot <- cleveland_testing_set_prediction |> ggplot(aes(x=Age, y=Trestbps, color=factor(`.pred_class`))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Prediction of Getting Heart Disease\") + ggtitle(\"Predicted Heart Disease\")\n",
     "prediction_plot"
    ]
   },
