--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1204,7 +1204,102 @@
    "source": [
     "actual_plot <- cleveland_test |> ggplot(aes(x=Age, y=Trestbps, color=factor(Num2))) + \n",
     "        geom_point() +\n",
-    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Prediction of Getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
+    "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Actually getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
+    "actual_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "092de3b9-98ac-411b-8ead-3d06c8539d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set.seed(1)\n",
+    "\n",
+    "cleveland_recipe <- recipe(Num2 ~ Age + Chol,data = cleveland_train) |>\n",
+    "  step_scale(all_predictors()) |>\n",
+    "  step_center(all_predictors())\n",
+    "\n",
+    "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |>\n",
+    "  set_engine(\"kknn\") |>\n",
+    "  set_mode(\"classification\")\n",
+    "\n",
+    "cleveland_vfold <- vfold_cv(cleveland_train, v = 5, strata = Num2)\n",
+    "gridvals <- tibble(neighbors = seq(from = 1, to = 50, by = 5))\n",
+    "\n",
+    "cleveland_results <- workflow() |>\n",
+    "  add_recipe(cleveland_recipe) |>\n",
+    "  add_model(knn_spec) |>\n",
+    "  tune_grid(resamples = cleveland_vfold, grid = gridvals) |>\n",
+    "  collect_metrics() |>\n",
+    "  filter(.metric == \"accuracy\")\n",
+    "\n",
+    "cleveland_results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37dbb0ab-2f32-40c7-acdc-d3f4abad887b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleveland_bps_knn_plot <- cleveland_results |>\n",
+    "    ggplot(aes(x = neighbors, y = mean)) +\n",
+    "    geom_line() +\n",
+    "    geom_point() +\n",
+    "    labs(x = \"Neighbors\", y = \"Predictor Accuracy\") +\n",
+    "    theme(text = element_text(size = 12))\n",
+    "\n",
+    "cleveland_bps_knn_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "873ab982-6480-470e-b23b-f6133ee026fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 20) |>\n",
+    "            set_engine(\"kknn\") |>\n",
+    "            set_mode(\"classification\")\n",
+    "\n",
+    "cleveland_recipe <- recipe(Num2 ~ Age + Chol, data = cleveland_train) |>\n",
+    "                        step_scale(all_predictors()) |>\n",
+    "                        step_center(all_predictors())\n",
+    "\n",
+    "cleveland_fit <- workflow() |>\n",
+    "                    add_recipe(cleveland_recipe) |>\n",
+    "                    add_model(knn_spec) |>\n",
+    "                    fit(data = cleveland_train)\n",
+    "cleveland_fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d31f3089-571f-4e52-ab20-639ca4bfc6c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_plot <- cleveland_testing_set_prediction |> ggplot(aes(x=Age, y=Chol, color=factor(`.pred_class`))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Cholesterol\", color = \"Prediction of Getting Heart Disease\") + ggtitle(\"Predicted Heart Disease\")\n",
+    "prediction_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a372fb9-7041-4c0a-adb2-95044ccf670a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actual_plot <- cleveland_test |> ggplot(aes(x=Age, y=Chol, color=factor(Num2))) + \n",
+    "        geom_point() +\n",
+    "        labs(x = \"Age\",y = \"Cholesterol\", color = \"Actually getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
     "actual_plot"
    ]
   },
