--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -17,28 +17,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "   Heart disease is a major global cause of death that takes millions of lives per year. According to the CDC, there is one death in the US every 34 seconds due to heart disease. Not only is this unfortunate for those ⅕ people who suffer this demise, but it also costs billions of dollars in health care services. Heart disease data sets such as this one can be useful to predict factors that make certain demographics of people more susceptible for suffering from a heart disease, thus allowing the development of mitigation strategies."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9eab3775-e469-498f-a0d8-6c6708e873fb",
-   "metadata": {},
-   "source": [
-    "## Question: \n",
-    "\n",
-    "Are cholesterol and/or blood pressure good indicators of heart disease?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2bf69311-1efd-433b-a53f-cf7999c34fb6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## Preliminary Exploratory Data Analysis:\n",
+    "Heart disease is one of, if not the most common causes for death in the United States. The CDC estimates that approximately ⅕ deaths in the country are caused by it, with it being so severe that a person will die every 34 seconds because of heart disease. There are a variety of factors that can contribute to the likelihood of heart disease, along with the varieties that exist, with coronary heart disease (CAD) being the most common of them. Out of the contributing factors towards CAD, there are two in particular that are more influential: blood pressure and cholesterol level in plasma. Studies in the past have shown there to be a correlation between both blood pressure & cholesterol levels and heart disease. A study focusing on blood pressure found that it can be  a major risk factor towards CAD, especially with those who are over 35 and those diagnosed with hypertension (Jeremiah Statler, et al., 1989). Another study which focused on cholesterol found that it has a very strong correlation with CAD, due to the formation of fatty plaque within the arteries which is aided by low density proteolipids (Scott M. Grundy, 1986). The latter study, as well as the CDC, both suggest that one of the most efficient ways to prevent high cholesterol is through a change in diet, regular exercise, and a reduction of consumption of harmful substances (such as alcohol or tobacco). However, this research will be asking the following question: is cholesterol and/or blood pressure good preditors of heart disease?\n",
     "\n",
     "We will be using the Heart Disease Data Set provided by UC Irvine. This data set describes heart condition information based on 303 individuals from different regions. This data is divided into 4 databases: Cleveland, Hungary, Switzerland, and the VA Long Beach, however we will only be utilizinng the Cleaveland data. The data set contains 76 attributes, but so far only 14 have been cited in literature:\n",
     "\n",
@@ -55,9 +34,7 @@
     "- Slope: the slope of the peak exercise ST segment (value 1 = upsloping, value 2 = flat, value 3 = downsloping)\n",
     "- Ca: number of major vessels (0-3) colored by fluoroscopy\n",
     "- Thal: 3 = normal, 6 = fixed defect, 7 = reversible defect\n",
-    "- Num: diagnosis of heart disease (angiographic disease status) (value 0 = <50% diameter narrowing, value 1 = > 50% diameter narrowing)\n",
-    "\n",
-    "For this project, we will be using the processed data from Cleaveland."
+    "- Num: diagnosis of heart disease (angiographic disease status) (value 0 = <50% diameter narrowing, value 1 = > 50% diameter narrowing)"
    ]
   },
   {
@@ -65,17 +42,7 @@
    "id": "cf97ea2f-2117-47c1-8812-4bb74c6c0663",
    "metadata": {},
    "source": [
-    "## Method\n",
-    "\n",
-    "To start our preliminary analysis, we loaded the Heart Disease dataset from the original source on the web using, the data from Cleveland is used and we primaryly process the raw database as follow:\n",
-    "\n",
-    "- Read the database from UCI machine learning data base\n",
-    "\n",
-    "- After having a brief view of the raw data base, we could find that\n",
-    "\n",
-    "  - Some Questionary mark is inside the database which indicates lacking data\n",
-    "  - Also, the parameter indicates heart disease have 3 different values and not a optimal factor to train a classification model with binary variable. Therefore, we mutate it to the value 0 or 1 where 0 indicates no heart disease and 1 indicates heart disease.\n",
-    "  - Additionally, for the convenience of implementing classification model later, we mutate a new column Num2 which is a factor to indicate heart disease."
+    "## Method"
    ]
   },
   {
@@ -88,6 +55,12 @@
     "library(tidyverse)\n",
     "library(tidymodels)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d37d240f-1251-4f2a-91db-00043d2e2116",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -111,6 +84,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e23f90ec-fb78-4178-8f47-08e4e8eff73e",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "607c22c6-311c-44a9-9ec2-e2904d7ed10e",
@@ -123,6 +102,12 @@
     "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Diagnosis of Heart Disease\")\n",
     "BP_vs_Age_plot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53229e3e-43a8-4bc6-87cc-5eea508b935a",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -139,6 +124,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed17442d-3c26-4aea-beb3-407ffd49e417",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "38686d08-4dbe-4a9a-acc2-24da2ea82601",
@@ -151,6 +142,12 @@
     "        labs(x = \"Chol\",y = \"Blood Pressure\", color = \"Diagnosis of Heart Disease\")\n",
     "BP_vs_Chol_plot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb5a4090-b6cd-486f-9f71-1330b81ae42d",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -169,6 +166,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d71065b4-c93f-46ed-9fdf-3cf49091ebca",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "143b5770-ea8c-448c-9aca-73adb630ceb1",
@@ -179,6 +182,12 @@
     "cleveland_train <- training(cleveland_split)\n",
     "cleveland_test <- testing(cleveland_split)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6778bc9b-a954-4cc9-8781-56814b2e6030",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -211,6 +220,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1209e6af-7f26-40f1-ac4f-7673ffbd2ca5",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3e4325a-16a3-4c9c-a211-e8c2fcf66a0f",
@@ -226,6 +241,12 @@
     "\n",
     "cleveland_bps_knn_plot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a47bd8a-b912-422c-86b8-d5ab577b7309",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -250,6 +271,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eeeb890d-84bc-44c0-903b-534708265863",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "827f5d9e-87c8-4e3b-821a-f35827248e09",
@@ -260,6 +287,12 @@
     "cleveland_testing_set_prediction <- cbind(cleveland_test,cleveland_prediction)\n",
     "cleveland_testing_set_prediction"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee6ec4d6-de46-4a55-a864-55f3e579609a",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,6 +308,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74c66a97-0aa0-4956-9f1f-445ba0bd8121",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "32605094-d930-45ed-a3d4-586fed007e1c",
@@ -286,6 +325,12 @@
     "        labs(x = \"Age\",y = \"Blood Pressure\", color = \"Actually getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
     "actual_plot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd9698cb-995c-4f14-9078-4954cf4d5eef",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -318,6 +363,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88987f8a-0d5c-4e5b-96d8-5974ca25d7b4",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "37dbb0ab-2f32-40c7-acdc-d3f4abad887b",
@@ -333,6 +384,14 @@
     "\n",
     "cleveland_bps_knn_plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e118d1ec-5c9e-46f7-9549-6ec19907ccb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -359,6 +418,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b0c7e37e-099e-446a-a19d-10e3a33aacb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d31f3089-571f-4e52-ab20-639ca4bfc6c7",
    "metadata": {},
    "outputs": [],
@@ -372,6 +439,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6d40030-a0d9-4d90-9690-0117c1bb28a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2a372fb9-7041-4c0a-adb2-95044ccf670a",
    "metadata": {},
    "outputs": [],
@@ -381,6 +456,14 @@
     "        labs(x = \"Age\",y = \"Cholesterol\", color = \"Actually getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
     "actual_plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8dc6a5-a918-4d1a-ae59-53c4f02a4bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
