--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -386,11 +386,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e118d1ec-5c9e-46f7-9549-6ec19907ccb1",
+   "cell_type": "markdown",
+   "id": "1b5c0328-ac00-4ae7-a417-e0f23563837c",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -416,11 +414,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0c7e37e-099e-446a-a19d-10e3a33aacb6",
+   "cell_type": "markdown",
+   "id": "81b440f5-7479-455c-9954-ddfa59353a4f",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -437,11 +433,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6d40030-a0d9-4d90-9690-0117c1bb28a5",
+   "cell_type": "markdown",
+   "id": "6f7ed91b-bb21-4443-bd2f-07d3740429ec",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -458,11 +452,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff8dc6a5-a918-4d1a-ae59-53c4f02a4bd7",
+   "cell_type": "markdown",
+   "id": "86e6cbe6-b3ba-4b75-851e-6c28eeed3728",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -470,26 +462,14 @@
    "id": "36e8b8b9-2dcc-4d98-93d1-adf0415dbd50",
    "metadata": {},
    "source": [
-    "Read csv file online from github, then we store the database in a variable ?. \n",
-    "We no\n",
+    "## Discussion\n",
     "\n",
-    "Read the database online and clean the database, etc…..\n",
+    "Based on our results, cholesterol is the stronger indicator for diagnosing heart disease than blood pressure. We determine this by looking at the scatterplots - the points on the plot for cholesterol vs age are much more condensed than the points on the plot for blood pressure vs age, and thus we can see a stronger correlation (60% accuracy with k nearest neighbors algorithm). We did indeed expect to find that both cholesterol and blood pressure are significant indicators for heart disease, but we did not know which one would be stronger. However, although cholesterol can definitely be considered a strong indicator, it should not be utilized nor considered as the only one. For simplicity of this project, we chose only to consider two of the most common health issues in Americans. Future research should account for other indicative variables, such as the other 74 attributes from the UC Irvine Heart Disease Data Set (e.g., chest pain, maximum heart rate, number of major vessels, etc). The more we understand about potential indicators of heart disease, the better we can treat at-risk patients.\n",
     "\n",
-    " \n",
+    "The biggest consequence of this high rate of heart disease is that it is the leading cause of death in America, with ⅕ deaths being caused by it (note that although our sample is only from Cleveland, we will interpret the results for the US as a whole). Adding to this, heart disease costs the country hundreds of billions of dollars in health care services which could instead be allocated towards other non-preventable medical needs. When looking at cholesterol and high blood pressure, the reduction of these is critical if one wishes to lower the likelihood of heart disease developing. That is not to say that by lowering cholesterol and high blood pressure levels one can fully prevent and avoid developing heart disease, but one can lower their chances of it happening. Further research in the future could focus on how people in the US can more efficiently control these factors, but also what can be done in order to aid them or to alleviate the responsibility of doing so independently and focus on improving health as a whole. \n",
     "\n",
-    "Since our goal is indicating the heart disease based on other observation and whether or not one gets  heart disease is a binary question, we choose to use classification on R to solve this problem.\n",
-    "\n",
-    " \n",
-    "\n",
-    "We split the database into two part, the training set and testing set. Training set is used to train the model and testing set is used to test the accuracy of the model. Cross-validation is applied to the training set in order to find the best k-value we shall use into train the model.\n",
-    "\n",
-    " \n",
-    "\n",
-    "As the RMSD (?) vs k-value shown, RMSD gets to minimum when k=?. Therefore, we pick k=? in training the model.\n",
-    "\n",
-    " \n",
-    "\n",
-    "After the model is trained by training data set, we test the accuracy of the model by testing data set. Note: after running the testing set, we could not go back to the training set and train the model once more since it’s already exposed to the testing set."
+    "The CDC recommends several methods for preventing high blood pressure and cholesterol, all involving practicing healthier living habits. Eating a healthier diet, maintaining a healthier weight, staying physically active, not smoking, drinking less alcohol, and sleeping more are the most effective ways of preventing high blood pressure and cholesterol (Centers for Disease Control and Prevention, 2022). Another important method is to seek medical professional help. These practices seem fairly simple and intuitive, so why is heart disease such an issue in a well-developed country like the US? A big reason is due to the capitalist state of the country where the billions of dollars made from junky, processed food takes priority over the health of its citizens; junk food is cheap and healthy foods are becoming exceedingly expensive making it inaccessible to eat healthy. Another reason is a general lack of education; processed food companies make their nutrition facts labels confusing enough that the average citizen wouldn’t understand how to interpret the numbers (Health US News, 2012).\n",
+    "Further research findings should also be readily accessible to the general public and should utilize accessible language for easy interpretation. Clear and concise publications in the form of infographics are an example of a way to effectively relay information to the public and avoid medical misinformation/mistrust, along with outreach programs in schools and workplaces, better access to recreational/physical activities, health care, and easily accessible nutrition. \n"
    ]
   },
   {
@@ -506,6 +486,10 @@
    "metadata": {},
    "source": [
     "Centers for Disease Control and Prevention. (2022, October 14). Heart disease facts. Centers for Disease Control and Prevention. Retrieved October 24, 2022, from https://www.cdc.gov/heartdisease/facts.htm#:~:text=Heart%20disease%20is%20the%20leading,groups%20in%20the%20United%20States.&text=One%20person%20dies%20every%2034,United%20States%20from%20cardiovascular%20disease.&text=About%20697%2C000%20people%20in%20the,1%20in%20every%205%20deaths.\n",
+    "\n",
+    "Grundy, S. M. (1986). Cholesterol and coronary heart disease. A New Era. JAMA: The Journal of the American Medical Association, 256(20), 2849–2858. https://doi.org/10.1001/jama.256.20.2849 \n",
+    "\n",
+    "Stamler, J., Neaton, J. D., &amp; Wentworth, D. N. (1989). Blood pressure (systolic and Diastolic) and risk of fatal coronary heart disease. Hypertension, 13(5_supplement). https://doi.org/10.1161/01.hyp.13.5_suppl.i2 \n",
     "\n",
     "UCI Machine Learning Repository: Heart disease data set. (n.d.). Retrieved October 28, 2022, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease"
    ]
