--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -972,12 +972,14 @@
    "id": "a49f9a82",
    "metadata": {},
    "source": [
+    "## Revising the Classifier\n",
+    "\n",
     "Now that we have our optimal K value, we will create a new classifier with K = 25 and name it as knn_best_spec."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "01809842",
    "metadata": {},
    "outputs": [
@@ -1046,12 +1048,12 @@
    "id": "eeb6c197",
    "metadata": {},
    "source": [
-    "Finally, we use the **predict** function to predict "
+    "#### Finally, we use the **predict** function to predict Num2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "7c624cb8",
    "metadata": {},
    "outputs": [
@@ -1131,17 +1133,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51146941",
+   "id": "89a9bae6-c847-48e6-b0d5-cfb9edfa8747",
    "metadata": {},
    "source": [
-    "cleveland_prediction <- predict(cleveland_fit, cleveland_test)\n",
-    "cleveland_testing_set_prediction <- cbind(cleveland_test,cleveland_prediction)\n",
-    "cleveland_testing_set_prediction"
+    "## Visualizing our Predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "5318dfa4",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "id": "9f2df7e0",
    "metadata": {},
    "outputs": [
@@ -1215,8 +1215,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ed13813-0f67-4a25-89fa-9103b05963d6",
+   "metadata": {},
+   "source": [
+    "## Now, we repeat the entire process with Cholestrol and Age as the Predictor Variables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "id": "ef52d6b4",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "id": "231790d5",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "614cf00c",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "34d3788f",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "f590c8aa",
    "metadata": {},
    "outputs": [
