--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 250,
    "id": "f590c8aa",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1673,8 @@
     "actual_plot <- cleveland_test |> \n",
     "        ggplot(aes(x=Age, y=Chol, color=factor(Num2))) + \n",
     "        geom_point() +\n",
-    "        labs(x = \"Age\",y = \"Cholesterol\", color = \"Actually getting Heart Disease\") + ggtitle(\"Actual Heart Disease\")\n",
+    "        labs(x = \"Age\",y = \"Cholesterol\", color = \"Actually getting Heart Disease\") + \n",
+    "        ggtitle(\"Actual Heart Disease\")\n",
     "actual_plot"
    ]
   },
@@ -1747,9 +1748,9 @@
    "id": "37760e23",
    "metadata": {},
    "source": [
-    "Centers for Disease Control and Prevention. (2022, October 14). Heart disease facts. Centers for Disease Control and Prevention. Retrieved October 24, 2022, from https://www.cdc.gov/heartdisease/facts.htm#:~:text=Heart%20disease%20is%20the%20leading,groups%20in%20the%20United%20States.&text=One%20person%20dies%20every%2034,United%20States%20from%20cardiovascular%20disease.&text=About%20697%2C000%20people%20in%20the,1%20in%20every%205%20deaths.\n",
+    "1. Centers for Disease Control and Prevention. (2022, October 14). Heart disease facts. Centers for Disease Control and Prevention. Retrieved October 24, 2022, from https://www.cdc.gov/heartdisease/facts.htm#:~:text=Heart%20disease%20is%20the%20leading,groups%20in%20the%20United%20States.&text=One%20person%20dies%20every%2034,United%20States%20from%20cardiovascular%20disease.&text=About%20697%2C000%20people%20in%20the,1%20in%20every%205%20deaths.\n",
     "\n",
-    "UCI Machine Learning Repository: Heart disease data set. (n.d.). Retrieved October 28, 2022, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease"
+    "2. UCI Machine Learning Repository: Heart disease data set. (n.d.). Retrieved October 28, 2022, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease"
    ]
   }
  ],
