updated with new code

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1190,8 +1190,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcb005c0-3c8d-4fea-be39-83245dd9b7d3",
+   "metadata": {},
+   "source": [
+    "The table above represents the metrics of the testing dataset after training the final version of KNN. The accuracy on the testing dataset is approximately 65%."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 254,
    "id": "af1b2c4c-f8c2-4963-a652-c14f459f287f",
    "metadata": {},
    "outputs": [
@@ -1213,6 +1221,14 @@
     "                                    conf_mat(truth = Num2, estimate = .pred_class)\n",
     "\n",
     "cleveland_prediction_conf_mat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54907c8-93c7-4c0c-b433-521f642fee95",
+   "metadata": {},
+   "source": [
+    "The table above is the confusion matrix of the predictions made on the testing dataset using the model."
    ]
   },
   {
@@ -1474,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 255,
    "id": "614cf00c",
    "metadata": {},
    "outputs": [
@@ -1494,12 +1510,12 @@
        "── Model ───────────────────────────────────────────────────────────────────────\n",
        "\n",
        "Call:\n",
-       "kknn::train.kknn(formula = ..y ~ ., data = data, ks = min_rows(35,     data, 5), kernel = ~\"rectangular\")\n",
+       "kknn::train.kknn(formula = ..y ~ ., data = data, ks = min_rows(40,     data, 5), kernel = ~\"rectangular\")\n",
        "\n",
        "Type of response variable: nominal\n",
-       "Minimal misclassification: 0.4273128\n",
+       "Minimal misclassification: 0.4229075\n",
        "Best kernel: rectangular\n",
-       "Best k: 35"
+       "Best k: 40"
       ]
      },
      "metadata": {},
@@ -1507,7 +1523,7 @@
     }
    ],
    "source": [
-    "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 35) |>\n",
+    "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 40) |>\n",
     "            set_engine(\"kknn\") |>\n",
     "            set_mode(\"classification\")\n",
     "\n",
@@ -1527,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 256,
    "id": "9b47074f-841b-406a-8c88-49f69b11721a",
    "metadata": {},
    "outputs": [
@@ -1541,8 +1557,8 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>accuracy</td><td>binary</td><td>0.6447368</td></tr>\n",
-       "\t<tr><td>kap     </td><td>binary</td><td>0.2805049</td></tr>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.6710526</td></tr>\n",
+       "\t<tr><td>kap     </td><td>binary</td><td>0.3365922</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -1552,8 +1568,8 @@
        " .metric & .estimator & .estimate\\\\\n",
        " <chr> & <chr> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t accuracy & binary & 0.6447368\\\\\n",
-       "\t kap      & binary & 0.2805049\\\\\n",
+       "\t accuracy & binary & 0.6710526\\\\\n",
+       "\t kap      & binary & 0.3365922\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -1562,14 +1578,14 @@
        "\n",
        "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| accuracy | binary | 0.6447368 |\n",
-       "| kap      | binary | 0.2805049 |\n",
+       "| accuracy | binary | 0.6710526 |\n",
+       "| kap      | binary | 0.3365922 |\n",
        "\n"
       ],
       "text/plain": [
        "  .metric  .estimator .estimate\n",
-       "1 accuracy binary     0.6447368\n",
-       "2 kap      binary     0.2805049"
+       "1 accuracy binary     0.6710526\n",
+       "2 kap      binary     0.3365922"
       ]
      },
      "metadata": {},
@@ -1584,8 +1600,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8343dbc7-e5d8-44ba-8fd0-26db59cf270c",
+   "metadata": {},
+   "source": [
+    "The table above represents the metrics of the testing dataset after training the final version of KNN. The accuracy on the testing dataset is approximately 67%."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 258,
    "id": "24391762-9777-4950-8550-66f0e5f978fb",
    "metadata": {},
    "outputs": [
@@ -1594,8 +1618,8 @@
       "text/plain": [
        "          Truth\n",
        "Prediction  0  1\n",
-       "         0 29 15\n",
-       "         1 12 20"
+       "         0 29 13\n",
+       "         1 12 22"
       ]
      },
      "metadata": {},
@@ -1610,8 +1634,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bab68ce4-db59-49f8-af3c-1d8d8c693939",
+   "metadata": {},
+   "source": [
+    "The table above represents the confusion matrix of the predictions made on the testing dataset using model2."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 252,
    "id": "34d3788f",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 253,
    "id": "f590c8aa",
    "metadata": {},
    "outputs": [
